@@ -3,6 +3,7 @@
 	* implemented method 'set_hparams' to NuaHandle class.
 	* implemented method 'get_hparams' to NuaHandle class.
 	* implemented method 'get_params' to Nua class.
+	* implemented function create on the module 'soa'
 
 2010-08-19  Paulo Pizarro <paulo.pizarro@gmail.com>
 	* added media states constants on the module 'soa'.
